--- a/src/common/nginx/nginx.conf.tmpl
+++ b/src/common/nginx/nginx.conf.tmpl
@@ -4,11 +4,15 @@
 
 user nginx;
 worker_processes auto;
-error_log /var/log/nginx/error.log;
+#error_log /var/log/nginx/error.log;
+error_log   /dev/stderr;
 pid /run/nginx.pid;
 
 # Load dynamic modules. See /usr/share/doc/nginx/README.dynamic.
 include /usr/share/nginx/modules/*.conf;
+
+# Load PAM auth module
+load_module "/usr/lib64/nginx/modules/ngx_http_auth_pam_module.so";
 
 events {
     worker_connections 1024;
@@ -19,7 +23,8 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    #access_log  /var/log/nginx/access.log  main;
+    access_log  /dev/stdout;
 
     sendfile            on;
     tcp_nopush          on;
@@ -35,48 +40,137 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
 
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
     server {
-        listen       80 default_server;
-        listen       [::]:80 default_server;
-        server_name  _;
-        root         /usr/share/nginx/html;
+        #  HTTP Settings
+#http    listen       8080 default_server;
+#http    listen       [::]:8080 default_server;
+#http    server_name  localhost;
+#http    root         /usr/share/nginx/html;
+
+         # HTTPS (SSL) Settings
+#ssl     listen       8080 ssl http2 default_server;
+#ssl     listen       [::]:8080 ssl http2 default_server;
+#ssl     server_name  localhost;
+#ssl     root         /usr/share/nginx/html;
+#ssl     ssl_certificate "/etc/pki/nginx/server.crt";
+#ssl     ssl_certificate_key "/etc/pki/nginx/private/server.key";
+#ssl     ssl_session_cache shared:SSL:1m;
+#ssl     ssl_session_timeout  10m;
+#ssl     ssl_ciphers HIGH:!aNULL:!MD5;
+#ssl     ssl_prefer_server_ciphers on;
+
+        autoindex off;
+        server_tokens off;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
         location / {
+            auth_pam "Secure Zone";
+            auth_pam_service_name "nginx";
         }
 
-        error_page 404 /404.html;
-            location = /40x.html {
+        location /desktop/ {
+            auth_pam "Secure Zone";
+            auth_pam_service_name "nginx";
+            proxy_pass    http://127.0.0.1:6901/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Server $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header Origin '';
         }
 
-        error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
+        location /app/ {
+            auth_pam "Secure Zone";
+            auth_pam_service_name "nginx";
+            proxy_pass    http://127.0.0.1:6901/app/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Server $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header Origin '';
         }
-    }
 
-# Settings for a TLS enabled server.
-#
-#    server {
-#        listen       443 ssl http2 default_server;
-#        listen       [::]:443 ssl http2 default_server;
-#        server_name  _;
-#        root         /usr/share/nginx/html;
-#
-#        ssl_certificate "/etc/pki/nginx/server.crt";
-#        ssl_certificate_key "/etc/pki/nginx/private/server.key";
-#        ssl_session_cache shared:SSL:1m;
-#        ssl_session_timeout  10m;
-#        ssl_ciphers HIGH:!aNULL:!MD5;
-#        ssl_prefer_server_ciphers on;
-#
-#        # Load configuration files for the default server block.
-#        include /etc/nginx/default.d/*.conf;
-#
-#        location / {
-#        }
-#
+        location /core/ {
+            auth_pam "Secure Zone";
+            auth_pam_service_name "nginx";
+            proxy_pass    http://127.0.0.1:6901/core/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Server $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header Origin '';
+        }
+
+        location /vendor/ {
+            auth_pam "Secure Zone";
+            auth_pam_service_name "nginx";
+            proxy_pass    http://127.0.0.1:6901/vendor/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Server $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header Origin '';
+        }
+
+        location /websockify {
+            auth_pam "Secure Zone";
+            auth_pam_service_name "nginx";
+            proxy_pass    http://127.0.0.1:6901/websockify;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Server $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header Origin '';
+        }
+
+        location /term/ {
+            auth_pam "Secure Zone";
+            auth_pam_service_name "nginx";
+            proxy_pass    http://127.0.0.1:57575/term/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Server $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header Origin '';
+        }
+
 #        error_page 404 /404.html;
 #            location = /40x.html {
 #        }
@@ -84,7 +178,6 @@ http {
 #        error_page 500 502 503 504 /50x.html;
 #            location = /50x.html {
 #        }
-#    }
-
+    }
 }
 
