--- a/src/common/nginx/nginx.conf.tmpl
+++ b/src/common/nginx/nginx.conf.tmpl
@@ -171,6 +171,20 @@ http {
             proxy_set_header Origin '';
         }
 
+        location /file/ {
+            auth_pam "Secure Zone";
+            auth_pam_service_name "nginx";
+            proxy_pass    http://127.0.0.1:57576/;
+            proxy_http_version 1.1;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Server $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_set_header Origin '';
+        }
+
+
 #        error_page 404 /404.html;
 #            location = /40x.html {
 #        }
