support ssl(default)

--- a/src/common/nginx/nginx.conf.tmpl
+++ b/src/common/nginx/nginx.conf.tmpl
@@ -58,7 +58,7 @@ http {
 #ssl     server_name  localhost;
 #ssl     root         /usr/share/nginx/html;
 #ssl     ssl_certificate "/etc/pki/nginx/server.crt";
-#ssl     ssl_certificate_key "/etc/pki/nginx/private/server.key";
+#ssl     ssl_certificate_key "/etc/pki/nginx/server.key";
 #ssl     ssl_session_cache shared:SSL:1m;
 #ssl     ssl_session_timeout  10m;
 #ssl     ssl_ciphers HIGH:!aNULL:!MD5;
